<resources>
    <string name="app_name">DeSocialize</string>


    <string name="singlePlayer">Single Player</string>
    <string name="multiPlayer">Multi Player</string>
    <string name="title_activity_single_player">SinglePlayerActivity</string>
    <string name="settings">Settings</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="invite">Invite</string>
    <string name="online_friends">Online Friends:</string>
    <string name="game_lobby">Game Lobby</string>
    <string name="players">Players:</string>
    <string name="game_type">Gamemode:</string>
    <string name="two_lives">Two Lives</string>
    <string name="first_unlock">First Unlock</string>
    <string name="stake">What\'s at the stake?</string>
    <string name="stake_2">Enter the stake...</string>
    <string name="start_game">Start game</string>
    <string name="profile">Profile</string>


    <string name="SPinfo">Please select the game duration:</string>
    <string name="minutesLabel">Minutes:</string>
    <string name="howToStart">Turn off screen to start</string>
    <string name="timeRemaining">Time remaining: </string>
    <string name="youLost">You lost!</string>
    <string name="youWin">You win!</string>
    <string name="tryAgain">Play again?</string>

    <string name="error">Error</string>

    <string name="shop">Shop</string>
    <string name="shop_avatars">Shop Avatars</string>
    <string name="shop_bonuses">Shop Bonuses</string>
    <string name="choose_avatar">Pick your Avatar</string>
    <string name="dunno">Dunno.</string>
    <string name="cancel_stake">Negate a stake</string>

    <string-array name="de_glyph_strings">
        <item>M81.496,150.509c0,25.832-16.325,45.662-37.758,45.662H12.642v-91.324h31.095C65.17,104.848,81.496,124.678,81.496,150.509z M64.393,150.509c0-15.655-8.44-25.57-20.656-25.57H30.411v51.141h13.327C55.953,176.08,64.393,166.165,64.393,150.509z</item>
        <item>M119.145,180.516c4.553,0,8.44-2.088,10.661-4.958l13.327,9.002c-5.442,8.872-13.66,13.438-24.21,13.438c-18.99,0-30.762-15.003-30.762-34.442s11.994-34.442,29.54-34.442c16.214,0,28.208,14.742,28.208,34.442c0,2.74-0.222,5.349-0.667,7.828h-39.424C107.928,178.167,113.037,180.516,119.145,180.516z M129.361,156.771c-1.777-7.567-6.774-10.306-11.771-10.306c-6.33,0-10.55,3.653-12.105,10.306H129.361z</item>
        <item>M152.018,175.428l15.325-10.437c2.776,7.567,7.552,12.655,16.325,12.655c8.44,0,10.55-3.914,10.55-7.436c0-5.61-4.442-7.828-16.103-11.611c-11.55-3.783-22.877-10.307-22.877-27.789c0-17.612,12.66-27.789,26.097-27.789c12.771,0,22.766,7.175,28.43,20.613l-14.992,10.307c-2.665-6.523-6.33-10.568-13.438-10.568c-5.552,0-8.329,3.262-8.329,6.915c0,4.175,1.888,7.045,13.993,11.351c11.771,4.175,24.987,9.002,24.987,28.31c0,17.613-11.994,28.05-28.874,28.05C166.788,197.998,156.349,188.866,152.018,175.428z</item>
        <item>M219.207,163.556c0-19.439,13.104-34.442,29.429-34.442s29.429,15.003,29.429,34.442s-13.104,34.442-29.429,34.442S219.207,182.995,219.207,163.556z M261.407,163.556c0-9.263-5.553-15.395-12.771-15.395s-12.771,6.132-12.771,15.395s5.553,15.395,12.771,15.395S261.407,172.818,261.407,163.556z</item>
        <item>M284.73,163.556c0-19.439,12.549-34.442,29.43-34.442c10.771,0,20.322,6.653,25.098,16.699l-14.549,9.915c-1.887-4.566-5.885-7.306-10.771-7.306c-7.219,0-12.549,6.132-12.549,15.134s5.33,15.134,12.549,15.134c4.887,0,8.996-2.74,10.771-7.306l14.549,9.785c-4.775,10.176-14.215,16.83-25.098,16.83C297.28,197.998,284.73,182.995,284.73,163.556z</item>
        <item>M344.258,113.458c0-6.393,4.553-11.742,9.994-11.742s9.994,5.349,9.994,11.742s-4.553,11.742-9.994,11.742S344.258,119.851,344.258,113.458z M345.924,130.94h16.656v65.231h-16.656V130.94z</item>
        <item>M431.768,130.94v65.231h-16.658v-6.132c-3.664,4.958-9.105,7.958-16.547,7.958c-14.547,0-26.541-15.003-26.541-34.442s11.994-34.442,26.541-34.442c7.441,0,12.883,3,16.547,7.958v-6.132H431.768z M415.109,163.556c0-9.785-5.551-15.917-13.215-15.917c-7.662,0-13.215,6.132-13.215,15.917s5.553,15.917,13.215,15.917C409.559,179.472,415.109,173.34,415.109,163.556z</item>
        <item>M443.984,100.934h16.658v95.238h-16.658V100.934z</item>
        <item>M471.193,113.458c0-6.393,4.553-11.742,9.994-11.742c5.443,0,9.996,5.349,9.996,11.742s-4.553,11.742-9.996,11.742C475.746,125.2,471.193,119.851,471.193,113.458z M472.859,130.94h16.658v65.231h-16.658V130.94z</item>
        <item>M544.488,177.907v18.265h-44.42v-13.046l20.988-33.92h-19.879V130.94h42.201v13.046l-20.99,33.92H544.488z</item>
        <item>M579.361,180.516c4.553,0,8.439-2.088,10.66-4.958l13.326,9.002c-5.441,8.872-13.658,13.438-24.209,13.438c-18.99,0-30.762-15.003-30.762-34.442s11.994-34.442,29.541-34.442c16.213,0,28.207,14.742,28.207,34.442c0,2.74-0.223,5.349-0.666,7.828h-39.424C568.145,178.167,573.254,180.516,579.361,180.516z M589.578,156.771c-1.777-7.567-6.775-10.306-11.771-10.306c-6.33,0-10.551,3.653-12.105,10.306H589.578z</item>

    </string-array>

    <integer-array name="de_glyph_colors">
        <item>@color/de_green</item>
        <item>@color/de_green</item>
        <item>@color/de_white</item>
        <item>@color/de_white</item>
        <item>@color/de_white</item>
        <item>@color/de_white</item>
        <item>@color/de_white</item>
        <item>@color/de_white</item>
        <item>@color/de_white</item>
        <item>@color/de_white</item>
        <item>@color/de_white</item>

    </integer-array>

</resources>
