<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context="com.a000webhostapp.desocialize.desocialize.LobbyActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorPrimary">


            <ImageButton
                android:id="@+id/nav_back_lobby"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                app:srcCompat="@mipmap/ic_arrow_left_white_24dp" />

            <TextView
                android:id="@+id/nav_text_lobby"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/game_lobby"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:orientation="vertical"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:focusable="true"
                android:focusableInTouchMode="true">



                <EditText
                    android:id="@+id/lobby_input_stake"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:hint="@string/stake_2"
                    android:gravity="center"/>



            </LinearLayout>

            <TextView
                android:id="@+id/game_type"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.85"
                android:background="#e1e1e1"
                android:gravity="center|center"
                android:paddingLeft="8dp"
                android:text="@string/game_type"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.25"
                android:layout_marginTop="5dp"
                android:gravity="center">

                <Button
                    android:id="@+id/lobby_mode_two"
                    android:backgroundTint="@color/colorPrimary"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:text="@string/first_unlock"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:textColor="#FFFFFF"
                    />

                <Button
                    android:id="@+id/lobby_mode_first"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/two_lives"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"

                    />

            </LinearLayout>



            <TextView
                android:id="@+id/lobby_friends"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.85"
                android:background="#e1e1e1"
                android:gravity="center|center"
                android:layout_marginTop="5dp"
                android:paddingLeft="8dp"
                android:text="@string/players"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/lobby_list"
                style="@style/Widget.AppCompat.ListView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6"

                android:background="#FFFFFF"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.25"
                android:layout_marginTop="5dp"
                android:gravity="right">

                <Button
                    android:id="@+id/lobby_start"
                    android:backgroundTint="#e1e1e1"
                    android:layout_width="wrap_content"
                    android:enabled="false"
                    android:clickable="false"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:text="@string/start_game"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="24sp"
                    android:textColor="#FFFFFF" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>



</RelativeLayout>
