<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.a000webhostapp.desocialize.desocialize.MenuActivity">

    <ImageView
        android:id="@+id/menu_logo"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="128dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/points_scrn"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/menu_sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="64dp"
        android:text="@string/singlePlayer"
        app:layout_constraintEnd_toEndOf="@+id/menu_logo"
        app:layout_constraintStart_toStartOf="@+id/menu_logo"
        app:layout_constraintTop_toBottomOf="@+id/menu_logo" />

    <Button
        android:id="@+id/menu_mp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/multiPlayer"
        app:layout_constraintEnd_toEndOf="@+id/menu_sp"
        app:layout_constraintStart_toStartOf="@+id/menu_sp"
        app:layout_constraintTop_toBottomOf="@+id/menu_sp" />

    <Button
        android:id="@+id/menu_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/settings"
        app:layout_constraintEnd_toEndOf="@+id/menu_mp"
        app:layout_constraintStart_toStartOf="@+id/menu_mp"
        app:layout_constraintTop_toBottomOf="@+id/menu_mp" />

    <ImageButton
        android:id="@+id/btn_qr"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/alert_dark_frame" />

    <ImageButton
        android:id="@+id/btn_avtar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/points_scrn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_activity_single_player"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_avtar"
        app:layout_constraintTop_toTopOf="@+id/btn_avtar" />

</android.support.constraint.ConstraintLayout>
